feat: 站点统计 增加文章卡片、数据的文章点击量显示 增加侧边栏的全站点击量显示 感谢 afoim 的源代码

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -110,6 +110,9 @@ const bannerOffset =
 
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<!-- <script defer src="https://cloud.umami.is/script.js" data-website-id="91c1b704-b094-4633-9453-77695a56c952"/> -->
+		<script src="/js/umami-share.js" defer/>
+
 		{favicons.map(favicon => (
 			<link rel="icon"
 				  href={favicon.src.startsWith('/') ? url(favicon.src) : favicon.src}
